# Agent-Swarm-Communication-Protocol

./: .gitignore  BACKLOG.md  Cargo.toml  DEMO_FIX.md  Dockerfile  MANIFEST.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TESTING.md  TUI_FIX_SUMMARY.md  example.env  log.txt  openswarm.conf  run-agent.sh  run-console.sh  run-node.sh  show-hierarchy.sh  swarm-manager.sh  test-both-modes.sh  test-tui.sh
.github/workflows/: e2e-matrix.yml  release.yml
agent-impl/: README.md
agent-impl/opencode/: opencode-agent.sh
agent-impl/zeroclaw/: zeroclaw-agent.sh
crates/openswarm-connector/: Cargo.toml
crates/openswarm-network/: Cargo.toml
crates/openswarm-protocol/: Cargo.toml
crates/wws-connector/: Cargo.toml
crates/wws-connector/src/: agent_bridge.rs  auth.rs  config.rs  connector.rs  file_server.rs  lib.rs  main.rs  operator_console.rs  rpc_server.rs  tui.rs
crates/wws-connector/tests/: integration_tests.rs  multi_agent_tests.rs  wws_integration_tests.rs
crates/wws-consensus/: Cargo.toml
crates/wws-consensus/src/: cascade.rs  lib.rs  mock_planner.rs  rfp.rs  voting.rs
crates/wws-consensus/tests/: cascade_tests.rs  rfp_tests.rs  voting_tests.rs
crates/wws-hierarchy/: Cargo.toml
crates/wws-hierarchy/src/: elections.rs  epoch.rs  geo_cluster.rs  lib.rs  pyramid.rs  succession.rs
crates/wws-hierarchy/tests/: election_tests.rs  pyramid_tests.rs
crates/wws-network/: Cargo.toml
crates/wws-protocol/: Cargo.toml
crates/wws-protocol/src/: constants.rs  crypto.rs  identity.rs  key_rotation.rs  lib.rs  messages.rs  replay.rs  types.rs
crates/wws-protocol/tests/: crypto_tests.rs  identity_tests.rs  key_rotation_tests.rs  message_tests.rs  replay_tests.rs  types_tests.rs
crates/wws-state/: Cargo.toml
crates/wws-state/src/: granularity.rs  lib.rs  pn_counter.rs  reputation.rs
crates/wws-state/tests/: content_store_tests.rs  crdt_tests.rs  granularity_tests.rs  merkle_dag_tests.rs  pn_counter_tests.rs  reputation_tests.rs
docker/wws-real-e2e/: docker-compose.yml
docs/: ADVANCED_FEATURES.md  Architecture.md  Connector-Guide.md  Consensus.md  HEARTBEAT.md  Hierarchy.md  Home.md  MESSAGING.md  Network.md  Protocol-Messages.md  Protocol-Specification.md  RUN_AGENT.md  Reputation-Identity.md  SKILL.md  State-Management.md  Test-Plan.md  WWS-Phases.md  _Sidebar.md  package.json
docs/e2e-results/: 2026-03-01-wws-real-e2e-log.md
docs/plans/: 2026-02-27-holonic-asip-e2e-test.md  2026-02-28-webapp-redesign-design.md  2026-02-28-webapp-redesign.md  2026-02-28-wws-full-transformation-design.md  2026-02-28-wws-transformation.md  2026-02-28-wws-webapp-design.md  2026-02-28-wws-webapp.md  2026-03-01-agent-soul-reputation-gate-security.md  2026-03-01-wws-e2e-testing.md  2026-03-01-wws-real-e2e-design.md  2026-03-01-wws-real-e2e-full.md
docs/wws/: MANIFEST.md  REPUTATION-AND-IDENTITY-SECURITY.md  WWS-TEST-PLAN.md  WWS-TRANSFORMATION-PLAN.md
scripts/: install.sh  load-env.sh  run-30-agents-web.sh  run-bootstrap-node.sh  run-node.sh  setup-local-llm.sh  stop-30-agents-web.sh  swarm-manager.sh  update-zeroclaw.sh
tests/e2e/: HOLONIC_E2E_TEST_PLAN.md  README.md  adversarial_tests.sh  (+21 more)
webapp/: index.html  package-lock.json  package.json  vite.config.js
(+68 files in other folders)
