[package]
name = "wws-connector"
description = "JSON-RPC API server and CLI binary for WWS Connector sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wws-connector"
path = "src/main.rs"

[dependencies]
wws-protocol = { workspace = true }
wws-network = { workspace = true }
wws-consensus = { workspace = true }
wws-hierarchy = { workspace = true }
wws-state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }
